force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Attachments_Files__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Attachments_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then all Attachments &amp; Files will be deleted from the Sandbox.</inlineHelpText>
    <label>Attachments &amp; Files</label>
    <type>Checkbox</type>
</CustomField>