force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Case_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected will Delete All Case comments.</description>
    <inlineHelpText>If selected will Delete All Case comments from the Sandbox</inlineHelpText>
    <label>Case Comments</label>
    <type>Checkbox</type>
</CustomField>