force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Chatter__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then All chatter feed will be deleted.</inlineHelpText>
    <label>Chatter</label>
    <type>Checkbox</type>
</CustomField>