force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Configuration_Id__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Configuration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Configuration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>