force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Description__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Description__c</fullName>
    <inlineHelpText>User can specify the more details like the Name of the Sandbox or Objects for which this Masking is going to be used.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>