force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Emails__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then All Email will be deleted from the Sandbox</inlineHelpText>
    <label>Emails</label>
    <type>Checkbox</type>
</CustomField>