force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Events__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Events__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then all Events will be deleted from the Sandbox</inlineHelpText>
    <label>Events</label>
    <type>Checkbox</type>
</CustomField>