force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Field_History__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Field_History__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then all Field History will be deleted.
Note: This setting requires the following permission: Delete from Field History and Delete from Field History Archive. Enable from Setup | User Interface</inlineHelpText>
    <label>Field History</label>
    <type>Checkbox</type>
</CustomField>