force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for internal testing only and will NOT be packaged in the final product. It will be used to test masking in Prod vs. non-Prod instance.</description>
    <inlineHelpText>This field is for internal testing only and will NOT be packaged in the final product. It will be used to test masking in Prod vs. non-Prod instance.</inlineHelpText>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>