force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Notes__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then all Notes will be deleted from the Sandbox</inlineHelpText>
    <label>Notes</label>
    <type>Checkbox</type>
</CustomField>