force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Notify_User__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Notify_User__c</fullName>
    <inlineHelpText>Enter username(Comma-separated) of those users, whom you want to notify after masking is completed.</inlineHelpText>
    <label>Notify Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>