force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Sandbox_Postcopy_Script__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Sandbox_Postcopy_Script__c</fullName>
    <formula>IF( ISBLANK(pcldm__Configuration_Id__c) , &apos;&apos;,  
$CustomMetadata.pcldm__DM_App_Config__mdt.pcldm__Namespace.pcldm__Value__c&amp;&quot;.DM_DataMaskingService.execute(&apos;&quot;
&amp;
pcldm__Configuration_Id__c 
&amp;
&quot;&apos;);&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the the Sandbox Postcopy script</inlineHelpText>
    <label>Sandbox Postcopy Script</label>
    <type>Text</type>
</CustomField>