force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Select_Masking_Type__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Select_Masking_Type__c</fullName>
    <label>Select  Masking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>