force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Show_Advance_Configurations__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Show_Advance_Configurations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show details</label>
    <type>Checkbox</type>
</CustomField>