force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__Tasks__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked then all Tasks will be deleted from the Sandbox</inlineHelpText>
    <label>Tasks</label>
    <type>Checkbox</type>
</CustomField>