force-app/main/default/objects/pcldm__Configuration__c/fields/pcldm__User_Email_ids__c.field-meta.xml
<CustomField>
    <fullName>pcldm__User_Email_ids__c</fullName>
    <description>Enter email id of those users from whom the string &apos;invalid&apos; needs to be removed from their email ids after Masking is executed via Sandbox Postcopy Script.</description>
    <inlineHelpText>Enter username from whom &apos;.invalid&apos; needs to be removed from their email addresses after Masking batch is run.</inlineHelpText>
    <label>Activate Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>