force-app/main/default/objects/pcldm__Configuration__c/listViews/pcldm__All.listView-meta.xml
<ListView>
    <fullName>pcldm__All</fullName>
    <columns>NAME</columns>
    <columns>pcldm__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>